2004-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/beam.cc (rest_collision_callback): use local beam
	multiplicity.

	* input/regression/stem-stemlet.ly: new file.

	* lily/stem.cc (add_head): store rests as well.

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	stemlet-length

	* lily/stem.cc: store rests as well.
	
	* input/regression/new-slur.ly: mention forcing.

2004-11-04  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/*: A new round of layout fixes and document
	structure cleanup.

2004-11-04  Heikki Junes <hjunes@cc.hut.fi>

        * Documentation/user/lilypond.tely: changes 2.3.x to 2.5.x.

2004-11-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi (Top): Remove geometry.

2004-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi (Top): Fix geometry url (dax).

	* lily/lily-parser.cc (LY_DEFINE): Remove "Now " from message.

	* lily/main.cc (main): Invoke identify.

	* scm/lily.scm (postscript->pdf): Remove progress newline.
	Write progress to stderr.

	* lily/paper-book.cc (output): Remove progress newline.

	* scm/framework-tex.scm (convert-to-dvi, convert-to-ps): Call
	gettext on user messages, and remove whitespace.

	* lily/paper-outputter.cc (get_paper_outputter): Add progress newline.

	* scripts/lilypond-latex.py (program_name): Bugfix: use only basename of
	argv[0] (Thomas Scharkowski).

	* configure.in: Bugfix: add REQUIRED parameter to STEPMAKE_TEXMF
	call (carlyannehorse).  Also check for mf and mf-nowin.  Add check
	for ec-fonts-mtraced.

	* GNUmakefile.in (builddir-exec): Add symlink tex/out.  Fixes
	--srcdir build (Bertalan).

	* stepmake/aclocal.m4 (STEPMAKE_GUILE_DEVEL): Check for guile
	headers and library too (Laura Conrad).

	* Documentation/topdocs/INSTALL.texi (Top): Mention development
	package for guile too (Laura Conrad).

	* lily/main.cc (usage): Typo.

2004-11-02  Werner Lemberg  <wl@gnu.org>
