@@ -1,3 +1,7 @@
+2004-11-05  Jan Nieuwenhuizen  <jannneke@gnu.org>
+
+	* scm/output-gnome.scm: More fontconfig comment.
+
 2004-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/beam.cc (rest_collision_callback): use local beam
